remove duktape